# simple

./: README.md  pyproject.toml
src/andysimple/: __init__ copy.bak  __init__.py  __main__.py
src/simple/: __init__.py  __main__.py
