[project]
name = "andysimple"
version = "0.1.2"
description = "A simple CLI tool for greeting"
readme = "README.md"
authors = [
    { name = "Andy Hu", email = "sheng.hu@live.cn" }
]
requires-python = ">=3.10"
dependencies = [
    "click>=8.3.2",
]
license = { text = "MIT" } # 建议添加开源协议
[project.urls]
Homepage = "https://github.com/epmpub/simple"

[project.scripts]
andysimple = "andysimple:main"

[build-system]
requires = ["uv_build>=0.9.0,<0.10.0"]
build-backend = "uv_build"
